--- a/ci-values-servicebus.yaml
+++ b/ci-values-servicebus.yaml
@@ -1,4 +1,6 @@
 image: hmctspublic.azurecr.io/plum/batch:latest
+triggerAuth:
+  enabled: false
 triggers:
   - type: azure-servicebus
     # Required: queueName OR topicName and subscriptionName
