--- a/function/templates/ScaledJob.yaml
+++ b/function/templates/ScaledJob.yaml
@@ -16,11 +16,11 @@ spec:
 {{ include "hmcts.podtemplate.v2.tpl" . | indent 4 }}
   triggers:
     {{- range .Values.triggers }}
-      {{- if eq .type "azure-servicebus" }}
-{{- include "function.servicebus" . | indent 4 }}
-      {{- else if eq .type "azure-blob" }}
       # work around to save having the triggerAuthName copied in the config for each trigger
       {{- $data := dict "root" $ "trigger" . }}
+      {{- if eq .type "azure-servicebus" }}
+{{- include "function.servicebus" $data | indent 4 }}
+      {{- else if eq .type "azure-blob" }}
 {{- include "function.blob" $data | indent 4 }}
       {{- end }}
     {{- end }}
