--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -6,11 +6,11 @@ parameters:
   - name: aksResourceGroup
     displayName: AKS Resource Group
     type: string
-    default: cft-preview-00-rg
+    default: cft-preview-01-rg # cft-preview-00-rg
   - name: aksCluster
     displayName: AKS Cluster Name
     type: string
-    default: cft-preview-00-aks
+    default: cft-preview-01-aks # cft-preview-00-aks
 
 name: chart-function pipeline
 trigger:
