--- a/function/templates/ScaledObject.yaml
+++ b/function/templates/ScaledObject.yaml
@@ -20,7 +20,7 @@ spec:
       {{- if eq .type "azure-servicebus" }}
 {{- include "function.servicebus" . | indent 4 }}
       {{- else if eq .type "prometheus" }}
-{{- include "function.http" . | indent 4 }}
+{{- include "function.prometheus" . | indent 4 }}
       {{- else if eq .type "azure-blob" }}
       # work around to save having the triggerAuthName copied in the config for each trigger
       {{- $data := dict "root" $ "trigger" . }}
