--- a/function/templates/_http-trigger.yaml
+++ b/function/templates/_http-trigger.yaml
@@ -1,5 +1,5 @@
-{{/* metadata for an Azure HTTP Trigger */}}
-{{- define "function.http" }}
+{{/* metadata for an Azure HTTP Trigger prometheus */}}
+{{- define "function.prometheus" }}
 - type: prometheus
   metadata:
     serverAddress: {{ .url }}
