add support for service bus pod id

--- a/function/templates/_servicebus-trigger.yaml
+++ b/function/templates/_servicebus-trigger.yaml
@@ -2,6 +2,9 @@
 {{- define "function.servicebus" }}
 - type: azure-servicebus
   metadata:
+    {{- if .serviceBusNamespace }}
+    namespace: {{ .serviceBusNamespace }}
+    {{- end }}
     {{- if .queueName }}
     queueName: {{ .queueName }}
     {{- end }}
