test service bus trigger

--- a/ci-values-servicebus.yaml
+++ b/ci-values-servicebus.yaml
@@ -2,10 +2,11 @@ image: hmctspublic.azurecr.io/plum/batch:latest
 triggers:
   - type: azure-servicebus
     # Required: queueName OR topicName and subscriptionName
-    queueName:
-    topicName: test-topic
-    subscriptionName: test-subscription
-    connection: TEST_ENV # This must be a connection string for a queue itself, and not a namespace level (e.g. RootAccessPolicy) connection string [#215](https://github.com/kedacore/keda/issues/215)
+    queueName: test-queue
+    serviceBusNamespace: test-sbus
+    #topicName: test-topic
+    #subscriptionName: test-subscription
+    #connection: TEST_ENV # This must be a connection string for a queue itself, and not a namespace level (e.g. RootAccessPolicy) connection string [#215](https://github.com/kedacore/keda/issues/215)
     queueLength: 1
 environment:
   TEST_ENV: "test"
