--- a/function/templates/_servicebus-trigger.yaml
+++ b/function/templates/_servicebus-trigger.yaml
@@ -16,8 +16,8 @@
     connection: {{ .connection }}
     {{- end }}
     queueLength: {{ .queueLength | quote }}
-  {{- if .root.Values.triggerAuth.enabled }}
+  {{- if .Values.triggerAuth.enabled }}
   authenticationRef:
-{{- include "function.trigger-auth-name" .root | indent 4 }}
+{{- include "function.trigger-auth-name" | indent 4 }}
   {{- end }}
 {{- end }}
