--- a/ci-values-servicebus.yaml
+++ b/ci-values-servicebus.yaml
@@ -5,13 +5,11 @@ triggerAuth:
   nameOverride: "azure-mi-auth-sbus"
 triggerPodIdentityProvider: "azure"
 triggers:
-  - type: azure-servicebus
-    # Required: queueName OR topicName and subscriptionName
-    queueName: test-queue
-    serviceBusNamespace: test-sbus
-    #topicName: test-topic
-    #subscriptionName: test-subscription
-    #connection: TEST_ENV # This must be a connection string for a queue itself, and not a namespace level (e.g. RootAccessPolicy) connection string [#215](https://github.com/kedacore/keda/issues/215)
-    queueLength: 1
-environment:
-  TEST_ENV: "test"
+- type: azure-servicebus
+  # Required: queueName OR topicName and subscriptionName
+  queueName: "test-queue"
+  serviceBusName: "test-sbus"
+  #topicName: test-topic
+  #subscriptionName: test-subscription
+  #connection: TEST_ENV # This must be a connection string for a queue itself, and not a namespace level (e.g. RootAccessPolicy) connection string [#215](https://github.com/kedacore/keda/issues/215)
+  queueLength: 1
