--- a/function/templates/_servicebus-trigger.yaml
+++ b/function/templates/_servicebus-trigger.yaml
@@ -2,22 +2,22 @@
 {{- define "function.servicebus" }}
 - type: azure-servicebus
   metadata:
-    {{- if .serviceBusNamespace }}
-    namespace: {{ .serviceBusNamespace }}
+    {{- if .trigger.serviceBusName }}
+    namespace: {{ .trigger.serviceBusName }}
     {{- end }}
-    {{- if .queueName }}
-    queueName: {{ .queueName }}
+    {{- if .trigger.queueName }}
+    queueName: {{ .trigger.queueName }}
     {{- end }}
-    {{- if .topicName }}
-    topicName: {{ .topicName }}
-    subscriptionName: {{ .subscriptionName }}
+    {{- if .trigger.topicName }}
+    topicName: {{ .trigger.topicName }}
+    subscriptionName: {{ .trigger.subscriptionName }}
     {{- end }}
-    {{- if .connection }}
-    connection: {{ .connection }}
+    {{- if .trigger.connection }}
+    connection: {{ .trigger.connection }}
     {{- end }}
-    queueLength: {{ .queueLength | quote }}
-  {{- if $.Values.triggerAuth.enabled }}
+    queueLength: {{ .trigger.queueLength | quote }}
+  {{- if .root.Values.triggerAuth.enabled }}
   authenticationRef:
-{{- include "function.trigger-auth-name"  | indent 4 }}
+{{- include "function.trigger-auth-name" .root | indent 4 }}
   {{- end }}
 {{- end }}
