--- a/function/templates/ScaledObject.yaml
+++ b/function/templates/ScaledObject.yaml
@@ -19,7 +19,7 @@ spec:
     {{- range .Values.triggers }}
       {{- if eq .type "azure-servicebus" }}
       {{- $data := dict "root" $ "trigger" . }}
-{{- include "function.servicebus" . | indent 4 }}
+{{- include "function.servicebus" $data | indent 4 }}
       {{- else if eq .type "azure-blob" }}
       # work around to save having the triggerAuthName copied in the config for each trigger
       {{- $data := dict "root" $ "trigger" . }}
