--- a/ci-values-blob-release-name.yaml
+++ b/ci-values-blob-release-name.yaml
@@ -1,8 +1,9 @@
 image: hmctspublic.azurecr.io/plum/batch:latest
+scaledType: Job
 triggerAuth:
   enabled: true
   create: true
-triggerPodIdentityProvider: "azure"
+  triggerPodIdentityProvider: "azure"
 triggers:
   - type: azure-blob
     # Required: blobContainerName and connection
