--- a/function/Chart.yaml
+++ b/function/Chart.yaml
@@ -23,4 +23,4 @@ appVersion: 0.1.0
 dependencies: # A list of the chart requirements (optional)
   - name: library
     version: 0.6.2
-    repository: '@hmctspublic'
+    repository: https://hmctspublic.azurecr.io/helm/v1/repo/
