--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -58,6 +58,15 @@ jobs:
           chartNamespace: chart-tests
           helmInstallTimeout: "500"
           valuesFile: ci-values-mixed.yaml
+  - job: ValidateMixed
+    steps:
+      - template: steps/charts/validate.yaml@cnp-library
+        parameters:
+          chartName: function
+          chartReleaseName: chart-function-ci-azure-pipelines-test
+          chartNamespace: chart-tests
+          helmInstallTimeout: "500"
+          valuesFile: ci-values-azure-pipelines.yaml
 
   - job: Release
     # Make sure we have a tag to run this job
