--- a/function/templates/ScaledJob.yaml
+++ b/function/templates/ScaledJob.yaml
@@ -22,6 +22,8 @@ spec:
 {{- include "function.servicebus" $data | indent 4 }}
       {{- else if eq .type "azure-blob" }}
 {{- include "function.blob" $data | indent 4 }}
+      {{- else if eq .type "azure-pipelines" }}
+  {{- include "function.azure-pipelines" $data | indent 4 }}
       {{- end }}
     {{- end }}
 {{- end }}
