--- a/function/values.yaml
+++ b/function/values.yaml
@@ -31,5 +31,5 @@ triggerAuth:
 triggerPodIdentityProvider: "azure" # none | azure | gcp | spiffe | aws-eks | aws-kiam
 triggers: []
 rollout:
-  strategy: gradual # Default streategy deletes the running jobs when the job spec changes
+  strategy: gradual # Default strategy deletes the running jobs when the job spec changes
   propagationPolicy: background
