Add rollout strategy for scaled job (#26)

--- a/function/values.yaml
+++ b/function/values.yaml
@@ -30,3 +30,6 @@ triggerAuth:
   nameOverride: ""
 triggerPodIdentityProvider: "azure" # none | azure | gcp | spiffe | aws-eks | aws-kiam
 triggers: []
+rollout:
+  strategy: gradual # Default strategy deletes the running jobs when the job spec changes
+  propagationPolicy: background
