--- a/function/Chart.yaml
+++ b/function/Chart.yaml
@@ -14,7 +14,7 @@ type: application
 
 # This is the chart version. This doesn't need to be incremented on every change. 
 # It is managed by release pipeline based on Github tag
-version: 0.1.0
+version: 0.1.0 # Do not change
 
 # This is the version number of the application being deployed. This doesn't need to be incremented on every change.
 # It is managed by release pipeline based on Github tag
